part2/scripts/app-one.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
  namespace: hello-apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
      - name: app2
        image: nginx
        ports:
        - containerPort: 80
        command: ["/bin/sh", "-c"]
        args: ["echo $(MESSAGE) > /usr/share/nginx/html/index.html && nginx -g 'daemon off;'"]
