part2/scripts/app-two.yml
apiVersion: v1
kind: Service
metadata:
  name: app-two
spec:
  selector:
    app: app-two
  ports:
  - port: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-two
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-two
  template:
    metadata:
      labels:
        app: app-two
    spec:
      containers:
      - name: app-two
        image: nginx
        ports:
        - containerPort: 80
        command: ["/bin/sh", "-c"]
        args: ["echo $(MESSAGE) > /usr/share/nginx/html/index.html && nginx -g 'daemon off;'"]
