part2/scripts/service-one.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-app-one
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    nodePort: 80
  selector:
    project: -book
