part2/scripts/traefik-default-route.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: default-backend
spec:
  entryPoints:
    - web
  routes:
  - match: HostRegexp(`{host:.+}`)
    kind: Rule
    priority: 1
    services:
    - name: app-three
      port: 80
