part2/scripts/traefik-routes.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: myingress
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`app1.com`)
    kind: Rule
    services:
    - name: app-one
      port: 80
  - match: Host(`app2.com`)
    kind: Rule
    services:
    - name: app-two
      port: 80
